:ambulance: Class corrected

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       />
       <button onclick="generateLink()">Générer le lien</button>
       <p id="generatedLink"></p>
+      <a href="./overlay.html">Ma chaîne</a>
     </div>
     <script src="./index.js"></script>
   </body>
