--- a/overlay.html
+++ b/overlay.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Twitch Chat Overlay</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="styleOverlay.css" />
   </head>
   <body>
     <div id="chat-container">
