:lipstick: Better visual

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <button onclick="generateLink()" class="oval button">
           Générer le lien
         </button>
-        <p id="generatedLink"></p>
+        <div id="generatedLink" class="generatedLink"></div>
       </div>
       <div class="exampleContainer"></div>
     </div>
